# poe1-htc

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
src/: main.rs
src/cli/: mod.rs
src/currency/: eldritch.rs  essences.rs  fossils.rs  harvest.rs  influence.rs  mod.rs  orbs.rs
src/data/: base_items.rs  loader.rs  mod.rs  mods.rs
src/engine/: mod.rs  mod_pool.rs
src/item/: mod.rs  modifier.rs  state.rs
src/search/: beam.rs  mod.rs
